HW 2 - TASK MANAGER MVVM(sort,menu)

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -35,7 +35,7 @@
                 android:text="@string/title"/>
 
             <TextView
-                android:id="@+id/tv_task_done"
+                android:id="@+id/tv_task_state"
                 app:layout_constraintStart_toStartOf="@id/tv_task_title"
                 app:layout_constraintTop_toBottomOf="@id/tv_task_title"
                 android:text="@string/not_done"
@@ -43,9 +43,10 @@
                 android:layout_height="wrap_content"/>
             
             <CheckBox
-                android:id="@+id/cb_is_done"
+                android:id="@+id/cb_task_state"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:clickable="false"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
