--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/tasksFragment"
-        android:name="com.example.taskmanagermvvm.ui.tasks.TaskFragment"
+        android:name="com.example.taskmanagermvvm.presentation.tasks.TaskFragment"
         android:label="fragment_tasks"
         tools:layout="@layout/fragment_tasks" />
     <fragment
         android:id="@+id/addTaskFragment"
-        android:name="com.example.taskmanagermvvm.ui.addtask.AddTaskFragment"
+        android:name="com.example.taskmanagermvvm.presentation.addtask.AddTaskFragment"
         android:label="fragment_add_task"
         tools:layout="@layout/fragment_add_task" />
 </navigation>
