--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="_32dp">32dp</dimen>
     <dimen name="_16dp">16dp</dimen>
+    <dimen name="_18sp">18sp</dimen>
+    <dimen name="default_touch_target">48dp</dimen>
 </resources>
