--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.addtask.AddTaskFragment">
+    android:padding="@dimen/_16dp"
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".presentation.addtask.AddTaskFragment">
 
     <EditText
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="@dimen/_16dp"
-        android:layout_marginTop="@dimen/_32dp"
         android:id="@+id/et_task_title"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/default_touch_target"
         android:hint="@string/title"
         android:inputType="text"
-        android:importantForAutofill="no" />
+        android:imeOptions="actionDone"
+        android:textSize="@dimen/_18sp"
+        android:importantForAutofill="no"/>
+
+    <CheckBox
+        android:id="@+id/cb_state"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="@string/state"
+        android:textSize="@dimen/_18sp"
+        android:layout_marginTop="@dimen/_32dp"/>
 
     <Button
         android:backgroundTint="@color/black"
         android:id="@+id/btn_save"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/_18sp"
         android:text="@string/save"
-        android:layout_marginHorizontal="@dimen/_16dp"
-        android:layout_marginBottom="@dimen/_32dp"/>
+        android:layout_marginTop="@dimen/_32dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout >
+</LinearLayout>
