--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TaskManagerMVVM" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.TaskManagerMVVM" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowActionBar">true</item>
+        <item name="colorPrimary">@color/grey</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
